# schedule-bot

./: .env.example  LICENSE  README.md  compose.yaml
data/n8n_data/: config  database.sqlite
data/n8n_workflows/: AI agent ollama mcp-client.json  Ai agent gigachat 2.json  Ai agent gigachat workflow.json  Webhook with gigachat.json  test.json
scripts/postgres/: group_schedules_2025.2026_1.sql  init-dbs.sql
services/auth_service/: Dockerfile  config.py  database.py  go.mod  go.sum  models.py  pyproject.toml
services/bot_service/: Dockerfile  README.md  pyproject.toml
services/bot_service/app/: bot.py  config.py  main.py  models.py
services/bot_service/app/callbacks/: __init__.py  common_callbacks.py  register.py  user_callbacks.py
services/bot_service/app/handlers/: __init__.py  admin.py  commands.py  common.py  echo.py  register.py  user.py
services/bot_service/app/keyboards/: __init__.py  common_keyboards.py  user_keyboards.py
services/bot_service/app/middlewares/: __init__.py  admin.py  check_user.py
services/bot_service/app/middlewaries/: __init__.py  admin.py  check_user.py
services/bot_service/app/services/: auth_service.py  n8n_service.py  schedule_service.py  user_service.py
services/bot_service/app/web/: routes.py
services/db_service/: main.py  pyproject.toml
services/max-bot/: go.mod  go.sum
services/mcp_server/: Dockerfile  go.mod
services/nlp_service/: main.py  pyproject.toml
services/schedule_service/: Dockerfile  go.mod  go.sum
swagger-spec/: auth-service.json  schedule-service.json  swagger-config.json  swagger.json
(+69 files in other folders)
