[project]
name = "bot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "cachetools>=6.2.2",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
